Tested on 
Motorola Vip : 1960, 1910, 1903, 1963.

VDR 1.7.29

0.20	Updated EPG filter
	SearchTimers Submenu.
	Channels updates
	In guideview you can have updates for all channels in view, was changed because it was too slow on 1910/1960 but 1963/1903 can handle it.
	Added PG info.


0.19	Added SleepTimer in menu 1 Settings. (Key is stopbutton)
	Timer menu OK shows same info as BLUE
	Updated EPG filter for MTV Transponder (Nick JR france, Nick NL)
	Channel group 0 : removed channels 30W, updated channels 28.8E 
	Show maps for first level submaps. <OK> to enter submap (Can be switched off in settings to keep old way of displaying)
	Timer entry for recording. (Starts instant recording at timer start)
	Added local recording, for units with hdd 
		Use epg view (yellow or menu 3) to set timers
			red - switchtimer only 
			rec - Server recording
			green - local recording
	Playback of localrecording (menu 2 / OK)
	During playback of recordings/ media parts of the mainmenu are accessible (View timers & settings)



0.18	Updated EPG filter for
		30W ZON, Digital, MEO
		19E Tid 1057 (RTL HD etc) 
		19E HD+
	Changed time out for switching server before instant recording from 1 sec to 5 sec.
	Added channelgroup 8 DVB-T Twente (The Netherlands)
	Fixed Menu 'Server : Media Directory'
	Fixed EPG & Server EPG info menu no more 'Undefined' but channelname/ number
	When playing recordings you can switch subs on/off with 'yellow'
	Switch Timer for protected channels only switch when protection is off
	Fixed <event> info, showing again date/ duration in server EPG view
	Fix : timers[i] tries to clear crap if current timer.length < previous timer.length
	New : in TimerMenu blue shows EPG info.
	With patched 'restfulapi' deleting of timers is possible.
	Added manual.txt : key info for KPN remote.


0.17	Show EPG from Server limited to X days ( 3 = default, set in settings.js)
	Updated Mainmenu. For now Recordings = Server Recordings menu item.