@@ -65,18 +65,16 @@ channelsnames[6029] = "SCT HD (S)";
 channels[6029]="S13.0E-318-5000-10";
 channelsnames[6030] = "Redlight 3D-HD (S)";
 channels[6030]="S13.0E-318-15800-16932";
-channelsnames[6032] = "EroX HD (S)";
-channels[6032]="S23.5E-3-3206-5414";
-channelsnames[6033] = "EroXX HD (S)";
-channels[6033]="S23.5E-3-3206-5411";
-channelsnames[6034] = "EroXXX HD (S)";
-channels[6034]="S23.5E-3-3206-5412";
+channelsnames[6032] = "EROX (S)";
+channels[6032]="S23.5E-3-3212-14052";
+channelsnames[6034] = "EROXXX (S)";
+channels[6034]="S23.5E-3-3212-14055";
 channelsnames[6035] = "Penthouse HD (S)";
-channels[6035]="S23.5E-3-3226-5607";
+channels[6035]="S23.5E-3-3236-5711";
 channelsnames[6036] = "Penthouse HD1 (S)";
-channels[6036]="S23.5E-3-3226-5608";
+channels[6036]="S23.5E-3-3236-5712";
 channelsnames[6037] = "Penthouse HD2 (S)";
-channels[6037]="S23.5E-3-3226-5602";
+channels[6037]="S23.5E-3-3236-5713";
 channelsnames[6038] = "Private Spice (S)";
 channels[6038]="S23.5E-3-3202-6072";
 channelsnames[6039] = "Penthouse HD (S)";
