@@ -127,8 +127,8 @@ var files = new Array();
 //		5 = extinfo
 //		6 = eventid
 //		7 = EPGNow / EPGNext
-//		8 = parentalRating
-
+//		8 = ParentalRating
+//		9 = ContentNibbles
 var EPG = new Array();
 EPG[0] = new Array();
 EPG[1] = new Array();
@@ -141,6 +141,7 @@ EPG[0][5] = new Array();
 EPG[0][6] = new Array();
 EPG[0][7] = new Array();
 EPG[0][8] = new Array();
+EPG[0][9] = new Array();
 EPG[1][1] = new Array();
 EPG[1][2] = new Array();
 EPG[1][3] = new Array();
@@ -149,6 +150,7 @@ EPG[1][5] = new Array();
 EPG[1][6] = new Array();
 EPG[1][7] = new Array();
 EPG[1][8] = new Array();
+EPG[1][9] = new Array();
 EPG[2][1] = new Array();
 EPG[2][2] = new Array();
 EPG[2][3] = new Array();
@@ -157,7 +159,10 @@ EPG[2][5] = new Array();
 EPG[2][6] = new Array();
 EPG[2][7] = new Array();
 EPG[2][8] = new Array();
+EPG[2][9] = new Array();
 
+var content = "";
+var connib = 0x00000000;
 var osdtimeout = 0;
 var osdVolumetimeout = 0;
 var epgactive = 0;
