@@ -7,7 +7,8 @@ VDR 1.7.29
 	SearchTimers Submenu.
 	Channels updates
 	In guideview you can have updates for all channels in view, was changed because it was too slow on 1910/1960 but 1963/1903 can handle it.
-	Added PG info.
+	Added PG & content info.
+	fixed show double epg info (epg shortinfo = epg ext. info)
 
 
 0.19	Added SleepTimer in menu 1 Settings. (Key is stopbutton)
